# Sandbox-Science

./: .gitignore  README.md  load_model.ipynb  make_faces.ipynb  pyproject.toml  train_model.ipynb  train_model_olvetti.ipynb
face_images/: face_1.npy  face_11.npy  face_12.npy  face_13.npy  face_14.npy  face_15.npy  face_16.npy  face_17.npy  face_18.npy  face_19.npy  face_2.npy  face_21.npy  face_22.npy  face_23.npy  face_24.npy  face_25.npy  face_26.npy  face_27.npy  face_28.npy  face_29.npy  face_3.npy  face_31.npy  face_32.npy  face_33.npy  face_34.npy  face_35.npy  face_36.npy  face_37.npy  face_38.npy  face_39.npy  face_4.npy  face_40.npy  face_41.npy  face_42.npy  face_43.npy  face_44.npy  face_45.npy  face_46.npy  face_47.npy  face_48.npy  (+56 more)
utils/: dataloaders.py
viz/: visualize.py
